# code-flow

./: index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/installer/: hooks.nsh
src-tauri/src/: ado.rs  claude.rs  fsops.rs  lib.rs  main.rs  paths.rs  remote.rs  secrets.rs  terminal.rs  tray.rs  watcher.rs
src-tauri/src/commands/: activity_cmd.rs  ado_cmd.rs  app_cmd.rs  claude_cmd.rs  fs_cmd.rs  git_ops.rs  mod.rs  repos.rs  secrets_cmd.rs  settings.rs  skills_cmd.rs  terminal_cmd.rs  watcher_cmd.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  queries.rs
src-tauri/src/git/: branch.rs  diff.rs  graph.rs  identity.rs  merge.rs  mod.rs  remotes.rs  repo.rs  stash.rs
src/components/ai/: ActivityModal.tsx  AiPanel.tsx  AnalyzeSection.tsx  ChatHistoryModal.tsx  FindingCard.tsx  PrCommentCard.tsx
src/components/chat/: ChatPanel.tsx
src/components/common/: BouncingDots.tsx  Checkbox.tsx  CollapsibleSection.tsx  ColorSwatchPicker.tsx  ConfirmModal.tsx  EmptyState.tsx  ProviderTabs.tsx  ResizeHandle.tsx  Skeleton.tsx  (+2 more)
src/lib/: activityEntries.ts  aiProviders.ts  buildFileTree.ts  claudeError.ts  dbml.ts  diffText.ts  fileStatus.ts  graphLayout.ts  markdown.ts  monacoLanguage.ts  parseAnalysis.ts  platform.ts  vcsProviders.ts
src/state/: accentStore.ts  activityStore.ts  aiProviderStore.ts  analyzeUiStore.ts  chatStore.ts  confirmStore.ts  fetchTimerStore.ts  jobsStore.ts  languageStore.ts  layoutStore.ts  navigationStore.ts  prStore.ts  preferencesStore.ts  repoStore.ts  terminalStore.ts  themeStore.ts  toastStore.ts  uiStore.ts  workspaceStore.ts
src/types/: domain.ts
(+35 files in other folders)
